--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,15 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Documentation
+API.md
+rules.md
+backEnd.md
+FrontEnd.md
+
+# IDE configuration
+.idea/
+
+# Local settings
+.windsurfrules
