feat: Vercel 배포 오류 수정 및 개발 환경 개선
-  대소문자 불일치로 인한 Vercel 배포 오류 수정 ().
- 에 에이전트 지침 및 코드 품질 원칙 추가.
- 페이지 렌더링 로깅을 위한  컴포넌트 추가 및 페이지 파일에  훅 적용.
- API 응답 처리 로직 개선 (, ).
- 불필요한 문서 파일 (, , ) 삭제 및  업데이트.

--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,9 @@ pnpm-debug.log*
 next-env.d.ts
 
 # Documentation
-#.gemini/docs/API.md
-#.gemini/docs/backEnd.md
-#.gemini/docs/FrontEnd.md
+.gemini/docs/API.md
+.gemini/docs/backEnd.md
+.gemini/docs/FrontEnd.md
 GEMINI.md
 
 # IDE configuration
